# optimal-best-item

./: .gitignore  main.py  pyproject.toml
data/: random_data.py
experiment1/: README.md  experiment.py  random_item.py
experiments/top_teams/: __init__.py  experiment.py  top_teams_a.py
src/experiments/: main.py
src/experiments/top_teams/: README.md  __init__.py  experiment.py  top_teams_a.py
src/utils/: pyproject.toml
tests/experiments/top_teams/: test_experiment.py
