[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Aveline-art <62368440+Aveline-art@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
experiment-utils = {path = "src/utils"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

